--- a/package.json
+++ b/package.json
@@ -42,9 +42,10 @@
     "@typescript-eslint/parser": "^2.21.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.0",
-    "eslint-plugin-import-helpers": "^1.0.2",
+    "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.18.3",
+    "eslint-plugin-simple-import-sort": "^5.0.2",
     "prettier": "^1.19.1"
   },
   "browserslist": {
